[package]
name = "rustybars"
version = "0.1.0"
edition = "2021"
authors = ["Andriy Yanko <andriy.yanko@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.6.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = '5.0.0'
